header-area done

--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G3-Arthitects</title>
+    <title>G3-Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!----------- header-area start from here ------------------------------>
+    <header class="header-area">
+        <div class="container">
+            <!-- header-top area start -->
+            <div class="header-top">
+                <div class="title">
+                    <h3>G3 Arthitects</h3>
+                </div>
+                <div class="menu">
+                    <nav><a href="#">Home</a></nav>
+                    <nav><a href="#">About</a></nav>
+                    <nav><a href="#">Contact Us</a></nav>
+                    <nav><a href="#">Log in</a></nav>
+                </div>
+            </div>
+            <!-- header-top area end -->
+        <!-- header-middle area start here -->
+            <div class="header-middle">
+                <h1>Brand New <br> Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br>some form, by injected humour, or randomised words which don't look even</p>
+                <button>Explore More</button>
+            </div>
+            <!-- header-middle area end -->
+            <!-- header-bottom area start -->
+            <div class="header-bottom">
+                <img src="images/banner.png" alt="banner">
+            </div>
+            <!-- header-bottom area end -->
+        </div>
+    </header>
+
+
+
+
 </body>
 </html>
