--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="header-middle">
                 <h1>Brand New <br> Group of Architects</h1>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br>some form, by injected humour, or randomised words which don't look even</p>
-                <button>Explore More</button>
+                <button class="same-button">Explore More</button>
             </div>
             <!-- header-middle area end -->
             <!-- header-bottom area start -->
@@ -38,6 +38,68 @@
             <!-- header-bottom area end -->
         </div>
     </header>
+    <main class="main-area">
+        <div class="container">
+            <!-- section-1 start -->
+            <div class="section-1">
+                <div class="left-side">
+                    <img src="images/team1.png" alt="team">
+                    <img src="images/team2.png" alt="team">
+                    <img src="images/team3.png" alt="team">
+                    <img src="images/team4.png" alt="team">
+                </div>
+                <div class="right-side">
+                    <h2> <span class="text1"> Quick list </span> of Our <br><span class="text2">Features</span></h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="same-button">Explore More</button>
+                </div>
+            </div> 
+            <!-- section-1 end -->
+            <!-- section-2 start -->
+                 <div class="section-2">
+                    <div class="left">
+                        <div class="section-2-top">
+                            <div class="line"></div>
+                            <div class="header">
+                                <h1>Features you will <br> love & enjoy</h1>
+                            </div>
+                        </div>
+                        <div class="para"> <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even </p></div>
+                        <!-- info section -->
+                        <div class="information">
+                            <div class="info">
+                                <h5>Desktop and Mobile Version</h5>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........</p>
+                            </div>
+                            <div class="info">
+                                <h5>Drug and Drop Builder</h5>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........</p>
+                            </div>
+                            <div class="info">
+                                <h5>Awesome Modern Design</h5>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........</p>
+                            </div>
+                            <div class="info">
+                                <h5>Super Easy to Edit</h5>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="right">
+                        <img src="images/architect.png" alt="architect">
+                        <button class="btn">
+                            <h1>10+ Year</h1>
+                            <p>Experience</p>
+                        </button>
+
+                    </div>
+                </div>
+            <div class="section-3"></div>
+            <div class="section-4"></div>
+        </div>
+
+    </main>
 
 
 
