--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="main-area">
         <div class="container">
             <!-- section-1 start -->
-            <div class="section-1">
+            <section class="section-1">
                 <div class="left-side">
                     <img src="images/team1.png" alt="team">
                     <img src="images/team2.png" alt="team">
@@ -53,10 +53,10 @@
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <button class="same-button">Explore More</button>
                 </div>
-            </div> 
+            </section> 
             <!-- section-1 end -->
             <!-- section-2 start -->
-                 <div class="section-2">
+                 <section class="section-2">
                     <div class="left">
                         <div class="section-2-top">
                             <div class="line"></div>
@@ -84,6 +84,7 @@
                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........</p>
                             </div>
                         </div>
+                        <!-- info end -->
 
                     </div>
                     <div class="right">
@@ -94,12 +95,107 @@
                         </button>
 
                     </div>
+                </section>
+                <!-- -----section-2 end ------------>
+                <!-- -----section-3 start --------->
+            <section class="section-3">
+                <div class="fact">
+                    <h2>Some Facts</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
                 </div>
-            <div class="section-3"></div>
-            <div class="section-4"></div>
+                <div class="reward">
+                    <div class="box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>54</h2>
+                        <p>Award Winnings</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>1458</h2>
+                        <p>Project Finished</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>590</h2>
+                        <p>Client Work</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>22578</h2>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+
+            </section>
+            <!-- ------section-3 end ---------->
+            <section class="section-4">
+                <div class="sponsor">
+                    <h2>Our Sponsors</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                    
+                </div>
+                <div class="icon">
+                    <img class="contrast" src="images/sponsors/spotify.png" alt="spotify">
+                    <img class="black" src="images/sponsors/amazon.png" alt="amazon">
+                    <img class="contrast" src="images/sponsors/google.png" alt="google">
+                    <img class="black" src="images/sponsors/telerama.png" alt="telegram">
+                    <img class="black" src="images/sponsors/figma.png" alt="figma">
+
+                </div>
+            </section>
+            <section class="section-5">
+                <div class="personal">
+                    <div class="content">
+                        <div class="personal-left">
+                            <img src="images/nazmul.png" alt="nazmul">
+                        </div>
+                        <div class="personal-right">
+                            <h2>Education Info</h2>
+                            <table>
+                                <tr>
+                                    <th>Examination</th>
+                                    <th>School/colg/uni</th>
+                                    <th>cgpa</th>
+                                    <th>Group/Dept</th>
+                                </tr>
+                                <tr>
+                                    <td>Secondary</td>
+                                    <td>Comilla modern School</td>
+                                    <td>5</td>
+                                    <td>Science</td>
+                                </tr>
+                                <tr>
+                                    <td>Higher Secondary</td>
+                                    <td>BCIC College</td>
+                                    <td>5</td>
+                                    <td>Science</td>
+                                </tr>
+                                <tr>
+                                    <td>B.Sc</td>
+                                    <td>Daffodil university</td>
+                                    <td>3.88</td>
+                                    <td>CSE</td>
+                                </tr>
+                            </table>
+                        </div>
+                    
+                    </div>
+                </div>
+
+            </section>
         </div>
 
     </main>
+    <footer class="footer-area">
+        <div class="container">
+            <div class="last-part">
+                <div class="pera-part"> 
+                    <p>All rights reserved copyright@2023 startup landing page design</p>
+                </div>
+            </div>  
+        </div>
+
+    </footer>
 
 
 
