--- a/index.html
+++ b/index.html
@@ -151,32 +151,34 @@
                         </div>
                         <div class="personal-right">
                             <h2>Education Info</h2>
-                            <table>
-                                <tr>
-                                    <th>Examination</th>
-                                    <th>School/colg/uni</th>
-                                    <th>cgpa</th>
-                                    <th>Group/Dept</th>
-                                </tr>
-                                <tr>
-                                    <td>Secondary</td>
-                                    <td>Comilla modern School</td>
-                                    <td>5</td>
-                                    <td>Science</td>
-                                </tr>
-                                <tr>
-                                    <td>Higher Secondary</td>
-                                    <td>BCIC College</td>
-                                    <td>5</td>
-                                    <td>Science</td>
-                                </tr>
-                                <tr>
-                                    <td>B.Sc</td>
-                                    <td>Daffodil university</td>
-                                    <td>3.88</td>
-                                    <td>CSE</td>
-                                </tr>
-                            </table>
+                            <div class="table-area">
+                                <table>
+                                    <tr>
+                                        <th>Examination</th>
+                                        <th>School/colg/uni</th>
+                                        <th>cgpa</th>
+                                        <th>Group/Dept</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Secondary</td>
+                                        <td>Comilla modern School</td>
+                                        <td>5</td>
+                                        <td>Science</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Higher Secondary</td>
+                                        <td>BCIC College</td>
+                                        <td>5</td>
+                                        <td>Science</td>
+                                    </tr>
+                                    <tr>
+                                        <td>B.Sc</td>
+                                        <td>Daffodil university</td>
+                                        <td>3.88</td>
+                                        <td>CSE</td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     
                     </div>
